--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.2.2
 accelerate==1.6.0
 adapters==1.1.1
 aiohappyeyeballs==2.6.1
@@ -6,10 +7,13 @@ aiosignal==1.3.2
 attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
 datasets==3.5.1
 dill==0.3.8
+evaluate==0.4.3
 filelock==3.18.0
 fonttools==4.57.0
 frozenlist==1.6.0
@@ -17,13 +21,16 @@ fsspec==2025.3.0
 huggingface-hub==0.30.2
 idna==3.10
 Jinja2==3.1.6
+joblib==1.5.0
 kiwisolver==1.4.8
+lxml==5.4.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 mpmath==1.3.0
 multidict==6.4.3
 multiprocess==0.70.16
 networkx==3.4.2
+nltk==3.9.1
 numpy==2.2.5
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
@@ -43,6 +50,7 @@ packaging==25.0
 pandas==2.2.3
 peft==0.15.2
 pillow==11.2.1
+portalocker==3.1.1
 propcache==0.3.1
 psutil==7.0.0
 pyarrow==20.0.0
@@ -52,11 +60,15 @@ pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rouge_score==0.1.2
+sacrebleu==2.5.1
 safetensors==0.5.3
 seaborn==0.13.2
 sentencepiece==0.2.0
+setuptools==80.4.0
 six==1.17.0
 sympy==1.14.0
+tabulate==0.9.0
 tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
